@@ -369,6 +369,7 @@ typedef struct symbol
   int recvSize;                     /* size of first argument  */
   struct bitVect *clashes;          /* overlaps with what other symbols */
   struct ast *funcTree;             /* function body ast if inlined */
+  struct symbol *addressmod[2];     /* access functions for named address spaces */
 
   bool for_newralloc;
 }
